# program_synthesis_parser

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lang.rs  lib.rs  spec.lalrpop  spec.rs
tests/: test.rs
tests/benchmarks/: bool_bor.mls  expr_div.mls  expr_sub.mls  tree_balanced.mls
tests/snapshots/: test__bool_always_false.snap  test__bool_always_true.snap  test__bool_band.snap  test__bool_bor.snap  test__bool_impl.snap  test__bool_neg.snap  test__expr.snap  test__expr_boolean.snap  test__expr_div.snap  test__expr_sub.snap  test__list_append.snap  test__list_compress.snap  test__list_concat.snap  test__list_drop.snap  test__list_dropeven.snap  test__list_even_parity.snap  test__list_filter.snap  test__list_fold.snap  test__list_hd.snap  test__list_inc.snap  test__list_last.snap  test__list_last2.snap  test__list_length.snap  test__list_make.snap  test__list_map.snap  test__list_nth.snap  test__list_pairwise_swap.snap  test__list_range.snap  test__list_rev_append.snap  test__list_rev_fold.snap  test__list_rev_snoc.snap  test__list_rev_tailcall.snap  test__list_snoc.snap  test__list_sort_sorted_insert.snap  test__list_sorted_insert.snap  test__list_stutter.snap  test__list_sum.snap  test__list_take.snap  test__list_tl.snap  test__nat_add.snap  (+19 more)
