[package]
name = "program_synthesis_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-insta = "1.26.0"
hashconsing = {version = "1.5", git = "https://github.com/Pat-Lafon/hashconsing.git", branch = "derive", features = ["derive"]}
insta = "1.26.0"
lalrpop-util = { version = "0.19", features = ["lexer"] }
regex = "1"

[build-dependencies]
lalrpop = "0.19"

[dev-dependencies]
insta = { version = "1.26.0", features = ["yaml"] }
