[package]
name = "program_synthesis_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashconsing = { git = "https://github.com/Pat-Lafon/hashconsing.git", branch = "derive", features = [
    "derive",
] }
insta = "1.39"
lalrpop-util = { version = "0.20", features = ["unicode", "lexer"] }
regex = "1"

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
insta = { version = "1.39", features = ["yaml"] }
